[package]
name = "kboot"
version = "0.1.17"
edition = "2024"
authors = ["Philo Groves <philogroves@gmail.com>"]
description = "A custom target runner for Rust-based operating system kernels"
license = "MIT"
repository = "https://github.com/philogroves/kboot"

[dependencies]
anyhow = "1.0.100"
bootloader = "0.11.12"
bootloader-boot-config = "0.11.12"
git2 = "0.20.2"
log = "0.4.28"
simple-logging = "2.0.2"
uuid = "1.18.1"
serde = "1.0.228"
serde_json = "1.0.145"
stopwatch = "0.0.7"
reqwest = { version = "0.12.24", features = ["blocking"] }
toml = "0.9.8"
webbrowser = "0.8.0"
fatfs = { version = "0.3.4", default-features = false, features = ["std", "alloc"] }
gpt = "3.0.0"
tempfile = "3.3.0"
sha2 = "0.10.9"

[features]
default = []
use_local_kview = []
ci = []